# aging-policy-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  RUNBOOK.md  cloudbuild.yaml  docker-compose.yml  package-lock.json  package.json
pipeline/: README.md  pyproject.toml  requirements.txt
pipeline/hapi_pipeline/: __init__.py  cli.py  config.py  contracts.py  db.py  loader.py  paper.py
pipeline/hapi_pipeline/ai/: __init__.py  assistant.py  summarize.py
pipeline/hapi_pipeline/analytics/: __init__.py  descriptive.py  its.py  runner.py
pipeline/hapi_pipeline/indicators/: __init__.py  engine.py  hapi_v1.py  weighting.py
pipeline/hapi_pipeline/ingest/: __init__.py  _statcan.py  base.py  cihi_caregiver_distress.py  cihi_ccrs_ltc.py  cihi_irrs.py  cihi_ltc_beds.py  ns_ltc_facilities.py  ns_ltc_waitlist.py  ns_open_data.py  ns_virtual_care.py  registry.py  statcan_adl.py  statcan_cchs.py  statcan_disability.py  statcan_functional_health.py  statcan_hale.py  statcan_internet_use.py  statcan_life_expectancy.py  statcan_low_income.py  statcan_ltc_employment.py  statcan_wds.py
pipeline/hapi_pipeline/ingest/fixtures/: README.md  cihi_caregiver_distress.csv  cihi_ccrs_ltc.csv  cihi_home_care_clients_65plus.csv  cihi_ltc_beds.csv  ns_accessing_primary_care.json  ns_ltc_facilities.json  ns_ltc_waitlist.json  ns_virtual_care.json  (+13 more)
pipeline/hapi_pipeline/literature/: __init__.py  loader.py  seed_literature.json
pipeline/hapi_pipeline/policies/: __init__.py  loader.py  seed_policies.json
pipeline/hapi_pipeline/transform/: __init__.py  quality.py
(+87 files in other folders)
